--- a/xtsrcmaps/CMakeLists.txt
+++ b/xtsrcmaps/CMakeLists.txt
@@ -12,3 +12,15 @@ add_executable(
 )
 target_link_libraries(xtsrcmaps PRIVATE fmt::fmt std::mdspan PkgConfig::cfitsio)
 target_include_directories(xtsrcmaps PRIVATE ${CMAKE_SOURCE_DIR})
+
+# Make test executable
+add_executable(tests tests/main.cpp
+  fitsfuncs.cxx
+  )
+target_link_libraries(tests PRIVATE fmt::fmt std::mdspan PkgConfig::cfitsio)
+target_include_directories(tests
+  PRIVATE ${CMAKE_SOURCE_DIR}
+  PUBLIC ${DOCTEST_INCLUDE_DIR})
+
+# target_compile_features(test PRIVATE cxx_std_17)
+# target_link_libraries(tests PRIVATE doctest::doctest)
