--- a/xtsrcmaps/CMakeLists.txt
+++ b/xtsrcmaps/CMakeLists.txt
@@ -1,26 +1,56 @@
-add_executable(
-  xtsrcmaps
-  bilerp.cxx
-  exposure.cxx
-  fitsfuncs.cxx
-  irf.cxx
-  parse_src_mdl.cxx
-  psf_bilerp.cxx
-  psf_v2.cxx
-  source_utils.cxx
-  xtsrcmaps.cxx
+#
+# ... #
+#
+include_directories(${CMAKE_SOURCE_DIR})
+
+add_library(bilerp OBJECT bilerp.cxx)
+target_link_libraries(bilerp PRIVATE fmt::fmt)
+#
+add_library(exposure OBJECT exposure.cxx)
+target_link_libraries(
+  exposure
+  PUBLIC irf
+  PRIVATE fmt::fmt std::mdspan
 )
-target_link_libraries(xtsrcmaps PRIVATE fmt::fmt std::mdspan PkgConfig::cfitsio)
-target_include_directories(xtsrcmaps PRIVATE ${CMAKE_SOURCE_DIR})
+#
+add_library(fitsfuncs OBJECT fitsfuncs.cxx)
+target_link_libraries(fitsfuncs PRIVATE fmt::fmt PkgConfig::cfitsio)
+#
+add_library(irf OBJECT irf.cxx)
+target_link_libraries(
+  irf
+  PUBLIC std::mdspan
+  PRIVATE fmt::fmt
+)
+#
+add_library(source_utils OBJECT source_utils.cxx)
+target_link_libraries(source_utils)
+#
+add_library(parse_src_mdl OBJECT parse_src_mdl.cxx)
+#
+add_library(psf_v2 OBJECT psf_v2.cxx psf_bilerp.cxx)
+target_link_libraries(
+  psf_v2
+  PUBLIC irf
+  PRIVATE fmt::fmt std::mdspan
+)
 
-# Make test executable
-add_executable(tests tests/main.cpp
-  fitsfuncs.cxx
-  )
-target_link_libraries(tests PRIVATE fmt::fmt std::mdspan PkgConfig::cfitsio)
-target_include_directories(tests
-  PRIVATE ${CMAKE_SOURCE_DIR}
-  PUBLIC ${DOCTEST_INCLUDE_DIR})
+#
+add_executable(xtsrcmaps xtsrcmaps.cxx)
+target_link_libraries(
+  xtsrcmaps
+  PRIVATE
+    fmt::fmt
+    std::mdspan
+    PkgConfig::cfitsio
+    bilerp
+    exposure
+    fitsfuncs
+    irf
+    parse_src_mdl
+    psf_v2
+    source_utils
+)
 
-# target_compile_features(test PRIVATE cxx_std_17)
-# target_link_libraries(tests PRIVATE doctest::doctest)
+# Tests ####
+add_subdirectory(tests)
