--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,13 +36,13 @@ pkg_check_modules(cfitsio REQUIRED IMPORTED_TARGET GLOBAL cfitsio)
 # ##############################################################################
 
 add_compile_options(
-  -Wall -Wextra -pedantic -Werror
-  # -march=native -fsanitize=address -fsanitize=leak -fsanitize=undefined
-  -fno-omit-frame-pointer -fno-common
+  -Wall -Wextra -pedantic -Werror # -mbmi2 -march=native
+  # -fsanitize=address -fsanitize=leak -fsanitize=undefined
+  # -fno-omit-frame-pointer -fno-common
 )
 add_link_options(
   # -fsanitize=address -fsanitize=leak -fsanitize=undefined
-  -fno-omit-frame-pointer -fno-common
+  # -fno-omit-frame-pointer -fno-common
 )
 
 add_subdirectory(xtsrcmaps)
