Tensor_ops and Fermitools equiv exposure tests
Some of the Tensor operations have been abstracted out into explicit functions
in the tensor_ops class.

New tests have been added to the test suite comparing final results and intermediate
values of the exposure computation to the results output by gtsrcmaps for 3C279.

--- a/xtsrcmaps/CMakeLists.txt
+++ b/xtsrcmaps/CMakeLists.txt
@@ -5,15 +5,16 @@ include_directories(${CMAKE_SOURCE_DIR})
 
 add_library(
   xtsrcmaps_lib OBJECT
+  tensor_ops.cxx
   bilerp.cxx
   exposure.cxx
   fitsfuncs.cxx
   healpix.cxx
   irf.cxx
-  source_utils.cxx
   parse_src_mdl.cxx
   psf_v2.cxx
   psf_bilerp.cxx
+  source_utils.cxx
 )
 
 add_library(Fermi::xtsrcmaps_lib ALIAS xtsrcmaps_lib)
