Working King precomputation and Psf Bilerp

--- a/xtsrcmaps/tests/CMakeLists.txt
+++ b/xtsrcmaps/tests/CMakeLists.txt
@@ -2,8 +2,13 @@
 #
 add_executable(
   tests
-  test_exposure.cxx test_fitsfuncs.cxx test_healpix.cxx test_irf.cxx
+  test_exposure.cxx
+  test_fitsfuncs.cxx
+  test_healpix.cxx
+  test_irf.cxx
+  test_king.cxx
   test_main.cxx #
+  test_psf_bilerp.cxx
   test_src_utils.cxx
 )
 target_link_libraries(
