--- a/xtsrcmaps/CMakeLists.txt
+++ b/xtsrcmaps/CMakeLists.txt
@@ -11,10 +11,8 @@ add_library(
   fitsfuncs.cxx
   healpix.cxx
   irf.cxx
-  king.cxx
   parse_src_mdl.cxx
-  psf_v2.cxx
-  psf_bilerp.cxx
+  psf.cxx
   source_utils.cxx
 )
 
@@ -22,7 +20,7 @@ add_library(Fermi::xtsrcmaps_lib ALIAS xtsrcmaps_lib)
 target_link_libraries(
   xtsrcmaps_lib
   PUBLIC std::mdspan
-  PRIVATE fmt::fmt std::mdspan PkgConfig::cfitsio
+  PRIVATE Eigen3::Eigen fmt::fmt std::mdspan PkgConfig::cfitsio
 )
 
 add_executable(xtsrcmaps xtsrcmaps.cxx)
