--- a/xtsrcmaps/CMakeLists.txt
+++ b/xtsrcmaps/CMakeLists.txt
@@ -14,14 +14,15 @@ add_library(
   model_map.cxx
   parse_src_mdl.cxx
   psf.cxx
+  sky_geom.cxx
   source_utils.cxx
 )
 
 add_library(Fermi::xtsrcmaps_lib ALIAS xtsrcmaps_lib)
 target_link_libraries(
   xtsrcmaps_lib
-  PUBLIC std::mdspan
-  PRIVATE Eigen3::Eigen fmt::fmt std::mdspan PkgConfig::cfitsio
+  PUBLIC std::mdspan PkgConfig::wcslib Eigen3::Eigen 
+  PRIVATE fmt::fmt std::mdspan PkgConfig::cfitsio
 )
 
 add_executable(xtsrcmaps xtsrcmaps.cxx)
