--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,24 +50,24 @@ pkg_check_modules(wcslib REQUIRED IMPORTED_TARGET GLOBAL wcslib)
 add_compile_options(
   -Wall
   -Wextra
-  -Werror # -mbmi2 -march=native
-  -pedantic
+  -Werror # -mbmi2
+  -march=native
   -Wno-unused-parameter
+  $<$<CONFIG:RELEASE>:-O3>
+  $<$<CONFIG:RELEASE>:-Og>
+  $<$<CONFIG:DEBUG>:-pedantic>
   $<$<CONFIG:DEBUG>:-g3>
   $<$<CONFIG:DEBUG>:-Og>
-  $<$<CONFIG:RELEASE>:-O3>
-  # $<$<CONFIG:DEBUG>:-fsanitize=address>
-  # -fsanitize=leak
-  # $<$<CONFIG:DEBUG>:-fsanitize=undefined>
-  # $<$<CONFIG:DEBUG>:-fno-omit-frame-pointer>
-  # $<$<CONFIG:DEBUG>:-fno-common>
+  $<$<CONFIG:DEBUG>:-fsanitize=address>
+  $<$<CONFIG:DEBUG>:-fsanitize=leak>
+  $<$<CONFIG:DEBUG>:-fsanitize=undefined>
+  $<$<CONFIG:DEBUG>:-fno-omit-frame-pointer>
+  $<$<CONFIG:DEBUG>:-fno-common>
 )
 add_link_options(
-  # $<$<CONFIG:DEBUG>:-fsanitize=address>
-  # -fsanitize=leak
-  # $<$<CONFIG:DEBUG>:-fsanitize=undefined>
-  # $<$<CONFIG:DEBUG>:-fno-omit-frame-pointer>
-  # $<$<CONFIG:DEBUG>:-fno-common>
+  $<$<CONFIG:DEBUG>:-fsanitize=address> $<$<CONFIG:DEBUG>:-fsanitize=leak>
+  $<$<CONFIG:DEBUG>:-fsanitize=undefined>
+  $<$<CONFIG:DEBUG>:-fno-omit-frame-pointer> $<$<CONFIG:DEBUG>:-fno-common>
 )
 
 add_subdirectory(xtsrcmaps)
