Working Genz Malik Integration over rectangular pixels in model map

--- a/xtsrcmaps/tests/CMakeLists.txt
+++ b/xtsrcmaps/tests/CMakeLists.txt
@@ -9,7 +9,7 @@ add_executable(
   # test_king.cxx
   test_main.cxx #
   # test_psf.cxx
-  test_model_map.cxx
+  test_model_map_v2.cxx
   # test_sky_geom.cxx
   # test_src_utils.cxx
 )
