Move to Eigen Tensor support for IRF and Exposure modules

--- a/xtsrcmaps/CMakeLists.txt
+++ b/xtsrcmaps/CMakeLists.txt
@@ -6,28 +6,28 @@ include_directories(${CMAKE_SOURCE_DIR})
 add_library(
   xtsrcmaps_lib OBJECT
   tensor_ops.cxx
+  fitsfuncs.cxx
+  parse_src_mdl.cxx
+  source_utils.cxx
+  sky_geom.cxx
+  irf.cxx
+  healpix.cxx
   bilerp.cxx
   exposure.cxx
-  fitsfuncs.cxx
-  genz_malik.cxx
-  healpix.cxx
-  irf.cxx
-  model_map.cxx
-  parse_src_mdl.cxx
-  psf.cxx
-  sky_geom.cxx
-  source_utils.cxx
+  # psf.cxx
+  # genz_malik.cxx
+  # model_map.cxx
 )
 
 add_library(Fermi::xtsrcmaps_lib ALIAS xtsrcmaps_lib)
 target_link_libraries(
   xtsrcmaps_lib
-  PUBLIC std::mdspan PkgConfig::wcslib Eigen3::Eigen
-  PRIVATE fmt::fmt std::mdspan PkgConfig::cfitsio
+  PUBLIC PkgConfig::wcslib Eigen3::Eigen
+  PRIVATE fmt::fmt PkgConfig::cfitsio
 )
 
-add_executable(xtsrcmaps xtsrcmaps.cxx)
-target_link_libraries(xtsrcmaps PRIVATE fmt::fmt Fermi::xtsrcmaps_lib)
+# add_executable(xtsrcmaps xtsrcmaps.cxx)
+# target_link_libraries(xtsrcmaps PRIVATE fmt::fmt Fermi::xtsrcmaps_lib)
 
 # Tests ####
 add_subdirectory(tests)
