--- a/xtsrcmaps/tests/CMakeLists.txt
+++ b/xtsrcmaps/tests/CMakeLists.txt
@@ -2,19 +2,19 @@
 #
 add_executable(
   tests
-  # test_exposure.cxx
-  # test_fitsfuncs.cxx
-  # test_healpix.cxx
-  # test_irf.cxx
-  # test_king.cxx
   test_main.cxx #
+  test_fitsfuncs.cxx
+  test_src_utils.cxx
+  test_sky_geom.cxx
+  test_irf.cxx
+  test_healpix.cxx
+  test_exposure.cxx
+  # test_king.cxx
   # test_psf.cxx
-  test_model_map_v2.cxx
-  # test_sky_geom.cxx
-  # test_src_utils.cxx
+  # test_model_map_v2.cxx
 )
 target_link_libraries(
-  tests PRIVATE fmt::fmt std::mdspan PkgConfig::cfitsio doctest::doctest
+  tests PRIVATE fmt::fmt PkgConfig::cfitsio doctest::doctest
                 Fermi::xtsrcmaps_lib
 )
 target_include_directories(tests PRIVATE ${CMAKE_SOURCE_DIR})
