Working Eigen-only PSF module. MDSPAN support deprecated

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,11 +21,8 @@ include(GNUInstallDirs)
 include(FetchContent)
 
 # Externals: The dependent packages on which the tool relies. ##
-FetchContent_Declare(
-  mdspan
-  GIT_REPOSITORY https://github.com/kokkos/mdspan
-  GIT_TAG stable
-)
+# FetchContent_Declare( mdspan GIT_REPOSITORY https://github.com/kokkos/mdspan
+# GIT_TAG stable )
 FetchContent_Declare(
   Eigen
   GIT_REPOSITORY https://gitlab.com/libeigen/eigen
@@ -36,7 +33,7 @@ FetchContent_Declare(
   GIT_REPOSITORY https://github.com/fmtlib/fmt
   GIT_TAG 9.0.0
 )
-FetchContent_MakeAvailable(mdspan Eigen fmt)
+FetchContent_MakeAvailable(Eigen fmt)
 
 # find_package(fmt REQUIRED)
 find_package(PkgConfig REQUIRED)
