--- a/xtsrcmaps/tests/CMakeLists.txt
+++ b/xtsrcmaps/tests/CMakeLists.txt
@@ -2,16 +2,16 @@
 #
 add_executable(
   tests
-  test_main.cxx #
-  test_fitsfuncs.cxx
-  test_src_utils.cxx
-  test_sky_geom.cxx
-  test_irf.cxx
-  test_healpix.cxx
   test_exposure.cxx
+  test_fitsfuncs.cxx
+  test_healpix.cxx
+  test_irf.cxx
   test_king.cxx
+  test_main.cxx #
+  test_model_map_v2.cxx
   test_psf.cxx
-  # test_model_map_v2.cxx
+  test_sky_geom.cxx
+  test_src_utils.cxx
 )
 target_link_libraries(
   tests PRIVATE fmt::fmt PkgConfig::cfitsio doctest::doctest
