--- a/xtsrcmaps/CMakeLists.txt
+++ b/xtsrcmaps/CMakeLists.txt
@@ -11,6 +11,7 @@ add_library(
   source_utils.cxx
   sky_geom.cxx
   irf.cxx
+  interp.cxx
   healpix.cxx
   bilerp.cxx
   exposure.cxx
@@ -23,11 +24,14 @@ add_library(Fermi::xtsrcmaps_lib ALIAS xtsrcmaps_lib)
 target_link_libraries(
   xtsrcmaps_lib
   PUBLIC PkgConfig::wcslib Eigen3::Eigen
-  PRIVATE fmt::fmt PkgConfig::cfitsio
+  PRIVATE fmt::fmt PkgConfig::cfitsio OpenMP::OpenMP_CXX
 )
 
 add_executable(xtsrcmaps xtsrcmaps.cxx)
 target_link_libraries(xtsrcmaps PRIVATE fmt::fmt Fermi::xtsrcmaps_lib)
+
+add_executable(gen_model_map scripts/gen_model_map.cxx)
+target_link_libraries(gen_model_map PRIVATE fmt::fmt Fermi::xtsrcmaps_lib)
 
 # Tests ####
 add_subdirectory(tests)
