Add command line parsing options

--- a/xtsrcmaps/CMakeLists.txt
+++ b/xtsrcmaps/CMakeLists.txt
@@ -3,7 +3,7 @@
 #
 include_directories(${CMAKE_SOURCE_DIR})
 
-add_executable(xtsrcmaps xtsrcmaps.cxx)
+add_executable(xtsrcmaps main.cxx)
 
 add_subdirectory(config)
 add_subdirectory(exposure)
@@ -17,7 +17,7 @@ add_subdirectory(sky_geom)
 add_subdirectory(source)
 
 target_link_libraries(xtsrcmaps fmt::fmt Eigen3::Eigen PkgConfig::cfitsio
-                      PkgConfig::wcslib reflectcpp)
+                      PkgConfig::wcslib cxxopts)
 
 # add_executable(gen_model_map scripts/gen_model_map.cxx)
 # target_link_libraries(gen_model_map PRIVATE fmt::fmt Fermi::xtsrcmaps_lib)
