restructure main.cxx

--- a/xtsrcmaps/CMakeLists.txt
+++ b/xtsrcmaps/CMakeLists.txt
@@ -12,6 +12,7 @@ add_subdirectory(healpix)
 add_subdirectory(irf)
 add_subdirectory(math)
 add_subdirectory(model_map)
+add_subdirectory(observation)
 add_subdirectory(psf)
 add_subdirectory(sky_geom)
 add_subdirectory(source)
