--- a/external/CMakeLists.txt
+++ b/external/CMakeLists.txt
@@ -6,15 +6,17 @@ FetchContent_Declare(
 FetchContent_Declare(
   fmt
   GIT_REPOSITORY https://github.com/fmtlib/fmt
-  GIT_TAG 9.0.0)
-# FetchContent_Declare( reflectcpp GIT_REPOSITORY
-# https://github.com/getml/reflect-cpp.git GIT_TAG v0.5.0)
-FetchContent_MakeAvailable(Eigen fmt) # reflectcpp)
+  GIT_TAG 10.2.0)
+FetchContent_Declare(
+  indicators
+  GIT_REPOSITORY https://github.com/p-ranav/indicators
+  GIT_TAG v2.3)
+FetchContent_MakeAvailable(Eigen fmt indicators)
 
 # Pkg-Config Externals ##
 find_package(PkgConfig REQUIRED)
 pkg_check_modules(cfitsio REQUIRED IMPORTED_TARGET GLOBAL cfitsio)
 pkg_check_modules(wcslib REQUIRED IMPORTED_TARGET GLOBAL wcslib)
 
-# 
+#
 add_subdirectory(cxxopts)
