--- a/xtsrcmaps/CMakeLists.txt
+++ b/xtsrcmaps/CMakeLists.txt
@@ -5,6 +5,7 @@ include_directories(${CMAKE_SOURCE_DIR})
 
 add_executable(xtsrcmaps main.cxx)
 
+add_subdirectory(cli)
 add_subdirectory(config)
 add_subdirectory(exposure)
 add_subdirectory(fits)
@@ -18,7 +19,7 @@ add_subdirectory(sky_geom)
 add_subdirectory(source)
 
 target_link_libraries(xtsrcmaps fmt::fmt Eigen3::Eigen PkgConfig::cfitsio
-                      PkgConfig::wcslib cxxopts)
+                      PkgConfig::wcslib cxxopts indicators)
 
 # add_executable(gen_model_map scripts/gen_model_map.cxx)
 # target_link_libraries(gen_model_map PRIVATE fmt::fmt Fermi::xtsrcmaps_lib)
