--- a/xtsrcmaps/math/CMakeLists.txt
+++ b/xtsrcmaps/math/CMakeLists.txt
@@ -1,1 +1,1 @@
-target_sources(xtsrcmaps PRIVATE bilerp.cxx genz_malik.cxx tensor_ops.cxx)
+target_sources(xtsrcmaps PRIVATE bilerp.cxx)  # genz_malik.cxx)
