--- a/xtsrcmaps/CMakeLists.txt
+++ b/xtsrcmaps/CMakeLists.txt
@@ -3,7 +3,7 @@
 #
 include_directories(${CMAKE_SOURCE_DIR})
 
-add_executable(xtsrcmaps main.cxx)
+add_library(xtsrcmaps SHARED)
 
 add_subdirectory(cli)
 add_subdirectory(config)
@@ -18,10 +18,14 @@ add_subdirectory(psf)
 add_subdirectory(sky_geom)
 add_subdirectory(source)
 
-target_link_libraries(xtsrcmaps fmt::fmt Eigen3::Eigen PkgConfig::cfitsio
-                      PkgConfig::wcslib cxxopts indicators)
+target_link_libraries(xtsrcmaps PRIVATE fmt::fmt PkgConfig::cfitsio
+                                        PkgConfig::wcslib cxxopts)
 
-# add_executable(gen_model_map scripts/gen_model_map.cxx)
-# target_link_libraries(gen_model_map PRIVATE fmt::fmt Fermi::xtsrcmaps_lib)
+add_executable(xtsrcmaps_exe main.cxx)
+set_target_properties(xtsrcmaps_exe PROPERTIES OUTPUT_NAME "xtsrcmaps")
+target_link_libraries(xtsrcmaps_exe PRIVATE xtsrcmaps)
+
+### add_executable(gen_model_map scripts/gen_model_map.cxx)
+### target_link_libraries(gen_model_map PRIVATE fmt::fmt Fermi::xtsrcmaps_lib)
 
 # Tests #### add_subdirectory(tests)
