Triangular Cubature ARPIST implementation with print statements - Output sees scaling issue

--- a/xtsrcmaps/fits/CMakeLists.txt
+++ b/xtsrcmaps/fits/CMakeLists.txt
@@ -2,4 +2,5 @@ target_sources(xtsrcmaps PRIVATE fits.ccube_energies.cxx
                                  fits.ccube_pixels.cxx
                                  fits.read_expcube.cxx
                                  fits.read_irf_pars.cxx
-)  #fits.write_src_model.cxx)
+                                 fits.write_src_model.cxx #
+)
