--- a/xtsrcmaps/exposure/CMakeLists.txt
+++ b/xtsrcmaps/exposure/CMakeLists.txt
@@ -1,9 +1,9 @@
-target_sources(xtsrcmaps PRIVATE exposure.cxx)
+target_sources(xtsrcmaps PRIVATE exposure.cxx exposure.contract.cpp)
 if(APPLE)
-    target_compile_definitions(xtsrcmaps PRIVATE ACCELERATE_NEW_LAPACK)
-    target_link_libraries(xtsrcmaps PRIVATE "-framework Accelerate")
+  target_compile_definitions(xtsrcmaps PRIVATE ACCELERATE_NEW_LAPACK)
+  target_link_libraries(xtsrcmaps PRIVATE "-framework Accelerate")
 else()
-    # do something for openblas or local link
-    # target_compile_definitions(xtsrcmaps PRIVATE ACCELERATE_NEW_LAPACK)
-    # target_link_options(xtsrcmaps PRIVATE "-framework Accelerate")
+  # do something for openblas or local link target_compile_definitions(xtsrcmaps
+  # PRIVATE ACCELERATE_NEW_LAPACK) target_link_options(xtsrcmaps PRIVATE
+  # "-framework Accelerate")
 endif()
