Initial DIffuse Source components

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -114,5 +114,5 @@ FetchContent_MakeAvailable(GTest )
 # target_include_directories(my_target PUBLIC ${DOCTEST_INCLUDE_DIR})
 include(CTest)
 enable_testing()
-add_subdirectory(tests)
-add_subdirectory(scripts)
+# add_subdirectory(tests)
+# add_subdirectory(support)
