--- a/xtsrcmaps/CMakeLists.txt
+++ b/xtsrcmaps/CMakeLists.txt
@@ -18,17 +18,18 @@ add_subdirectory(psf)
 add_subdirectory(sky_geom)
 add_subdirectory(source)
 
-target_link_libraries(xtsrcmaps PRIVATE fmt::fmt PkgConfig::cfitsio
-                                        PkgConfig::wcslib cxxopts)
+target_link_libraries(
+  xtsrcmaps PRIVATE fmt::fmt
+                    PkgConfig::wcslib cxxopts)
 
 add_executable(xtsrcmaps_exe main.cxx)
 set_target_properties(xtsrcmaps_exe PROPERTIES OUTPUT_NAME "xtsrcmaps")
 target_link_libraries(xtsrcmaps_exe PRIVATE xtsrcmaps)
 
-add_executable(xtread xtread.cpp)
-target_link_libraries(xtread PRIVATE xtsrcmaps)
+# add_executable(xtread xtread.cpp) target_link_libraries(xtread PRIVATE
+# xtsrcmaps)
 
-### add_executable(gen_model_map scripts/gen_model_map.cxx)
-### target_link_libraries(gen_model_map PRIVATE fmt::fmt Fermi::xtsrcmaps_lib)
+# add_executable(gen_model_map scripts/gen_model_map.cxx)
+# target_link_libraries(gen_model_map PRIVATE fmt::fmt Fermi::xtsrcmaps_lib)
 
 # Tests #### add_subdirectory(tests)
