--- a/xtsrcmaps/math/CMakeLists.txt
+++ b/xtsrcmaps/math/CMakeLists.txt
@@ -1,1 +1,6 @@
-target_sources(xtsrcmaps PRIVATE bilerp.cxx)  # genz_malik.cxx)
+target_sources(
+  xtsrcmaps PRIVATE bilerp.cxx # convolve/fft/fft.apple_convolve3d.cpp
+  convolve/fft/fft.fftw_convolve_CHW.cpp
+) # genz_malik.cxx)
+
+target_link_libraries(xtsrcmaps PRIVATE PkgConfig::fftw3)
