--- a/xtsrcmaps/source/CMakeLists.txt
+++ b/xtsrcmaps/source/CMakeLists.txt
@@ -1,1 +1,2 @@
-target_sources(xtsrcmaps PRIVATE source.cxx source.parse_src_mdl.cxx)
+target_sources(xtsrcmaps PRIVATE source.cxx source.collect_source_model.cpp
+                                 source.parse_src_mdl.cxx)
